@@ -1,3 +1,8 @@
+2008-10-06  Srinivasa Ragavan  <sragavan@novell.com>
+
+	* camel/camel-exchange-folder.c (class_init),
+	(count_by_expression): Adapt to new camel ABI
+
 2008-09-22  Matthew Barnes  <mbarnes@redhat.com>
 
 	* camel/camel-exchange-folder (camel_exchange_folder_add_message):
